# rust-for-me

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
assets/js/: codemirror-bundle.js
content/exercises/m01/: e01_hello.toml  e02_variables.toml  e03_fix_hello.toml  e04_predict_output.toml
content/exercises/m02/: e01_variables.toml  e02_fix_mutability.toml  e03_types.toml  e04_predict_types.toml  e05_functions.toml  e06_fix_return.toml  e07_control_flow.toml  e08_predict_match.toml  e09_fix_ownership.toml  e10_fix_borrowing.toml  e11_fix_mutability_e0384.toml  e12_predict_ownership.toml
content/exercises/m03/: e01_ownership_move.toml  e02_fix_borrowing.toml  e03_references.toml  e04_predict_ownership.toml  e05_slices.toml  e06_lifetime_fix.toml
content/exercises/m04/: e01_create_struct.toml  e02_methods.toml  e03_enum_match.toml  e04_option_result.toml  e05_predict_enum.toml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compiler.rs  filesystem.rs  mod.rs  progress.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src/components/: mod.rs
src/components/common/: loading.rs  (+5 more)
src/i18n/: locale.rs  mod.rs
src/models/: exercise.rs  lesson.rs  mod.rs  module.rs  progress.rs  project.rs
src/pages/: dashboard.rs  mod.rs  settings.rs
src/services/: compiler_service.rs  config_service.rs  content_service.rs  learning_path.rs  mod.rs  progress_service.rs
(+72 files in other folders)
