[workspace]
members = ["src-tauri"]

[package]
name = "rust-for-everyone"
version = "0.1.0"
edition = "2021"
description = "Learn Rust interactively with an app built in Rust"

[[bin]]
name = "rust-for-everyone"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Navigator", "Clipboard", "console"] }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
