[package]
name = "rust-for-everyone-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri backend for Rust for Everyone"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
tokio = { version = "1", features = ["process", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
